@@ -23,7 +23,9 @@ Connect to MongoDB
    Create a Client </connect/mongoclient>
    Stable API </connect/stable-api>
    Choose a Connection Target </connect/connection-targets>
+   Limit Execution Time </connect/csot>
    Configure TLS </connect/tls>
+
 ..   /connect/connection-options
 
 Overview
@@ -35,4 +37,5 @@ a MongoDB deploying by using the {+driver-short+} in the following sections:
 - :ref:`scala-connect-to-mongodb`
 - :ref:`scala-stable-api`
 - :ref:`scala-connection-targets`
+- :ref:`scala-csot`
 - :ref:`scala-tls`
