@@ -67,6 +67,12 @@ To learn more about processing results, see the following API documentation:
 - `Subscription <{+api+}/org/mongodb/scala/Subscription.html>`__
 - `Observer <{+api+}/org/mongodb/scala/Observer.html>`__
 
+.. tip:: Observable Timeout
+
+   You can set a timeout on your ``Observable`` to return query results.
+   To learn more, see the :ref:`scala-csot-observables` section of the Limit
+   Server Execution Time guide.
+
 Sample Data
 ~~~~~~~~~~~
 
