@@ -132,10 +132,6 @@ can use to set options for the count operation:
      - | Sets the maximum number of documents to count. This value must be a positive integer.
        | **Parameter Type**: ``int``
 
-   * - ``maxTime()``
-     - | Sets the maximum amount of time that the operation can run.
-       | **Parameter Types**: ``long`` and ``TimeUnit``
-
    * - ``skip()``
      - | Sets the number of documents to skip before counting documents.
        | **Parameter Type**: ``int``
@@ -188,13 +184,12 @@ Customize Estimated Count Behavior
 
 You can modify the behavior of the ``estimatedDocumentCount()`` method by
 passing an ``EstimatedDocumentCountOptions`` instance as a parameter. The
-``EstimatedDocumentCountOptions`` class includes the ``maxTime()`` member function,
-which you can use to configure your ``EstimatedDocumentCountOptions`` object and
-set the maximum time that the count operation can run.
+``EstimatedDocumentCountOptions`` class includes the ``comment()`` member function,
+which you can use to set a comment attached to your operation.
 
 The following example uses the ``estimatedDocumentCount()`` method to return an
-estimate of the number of documents in the collection and sets a timeout of
-``3`` seconds on the operation:
+estimate of the number of documents in the collection and sets a comment
+on the operation:
 
 .. io-code-block::
    :copyable:
