@@ -129,10 +129,6 @@ table describes some of these methods:
      - | Sets the collation to use for the operation.
        | **Parameter Type**: ``Collation``
 
-   * - ``maxTime()``
-     - | Sets the maximum amount of time that the operation can run.
-       | **Parameter Type**: ``Duration``
-
    * - ``comment()`` 
      - | Attaches a comment to the operation.
        | **Parameter Type**: ``BsonValue`` or ``String``
