@@ -130,7 +130,7 @@ This driver version introduces the following breaking changes:
   Instead, you can use the ``Filters.eq()`` method when instantiating a
   ``VectorSearchOptions`` type, as shown in the following code:
 
-  .. code-block:: java
+  .. code-block:: scala
 
      VectorSearchOptions opts = vectorSearchOptions().filter(eq("x", 8));
 
@@ -155,14 +155,14 @@ This driver version introduces the following breaking changes:
   ``ClusterConnectionMode.MULTIPLE``. Previously, the second example returned
   ``ClusterConnectionMode.SINGLE``.
 
-  .. code-block:: java
+  .. code-block:: scala
 
      ClusterSettings.builder()
          .applyConnectionString(new ConnectionString("mongodb://127.0.0.1:27017/?replicaSet=replset"))
          .build()
          .getMode()
 
-  .. code-block:: java
+  .. code-block:: scala
 
      ClusterSettings.builder()
          .hosts(Collections.singletonList(
@@ -364,7 +364,7 @@ This driver version introduces the following breaking changes:
   For example, the following record class definitions show a ``Book`` record
   that contains a ``List`` that receives a ``Chapter`` type parameter:
 
-  .. code-block:: java
+  .. code-block:: scala
 
      public record Book(String title, List<Chapter> chapters) {}
      public record Chapter(Integer number, String text) {}
