@@ -80,6 +80,13 @@ transaction:
          error if there is no active transaction for the session or if the
          transaction was committed or ended.
 
+.. tip:: Transaction Timeout
+
+   You can set a limit on amount of time that operations can take
+   to complete in your transactions. To learn more, see the
+   :ref:`scala-csot-transaction` section of the Limit Server Execution
+   Time guide.
+
 .. _scala-txn-example:
 
 Transaction Example
