@@ -63,6 +63,10 @@ and features:
 
 .. sharedinclude:: dbx/jvm/v5.2-wn-items.rst
 
+   .. replacement:: csot-link
+
+      the :ref:`scala-csot` guide.
+
    .. replacement:: avs-index-link
 
       the `SearchIndexModel <{+core-api+}/com/mongodb/client/model/SearchIndexModel.html>`__
